[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Main Level/BG.png" type="Texture" id=1]
[ext_resource path="res://Assets/Main Level/Back Hills.png" type="Texture" id=2]
[ext_resource path="res://Assets/Main Level/Front Hills.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tilesets/Blocks2/tileset_Blocks2.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=6]
[ext_resource path="res://Assets/Music/Slime-san Creator- Music by Meganeko.mp3" type="AudioStream" id=7]
[ext_resource path="res://Scenes/SlideshowWarp.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/SlideShows/Slide Shows/SH1.tscn" type="PackedScene" id=9]

[node name="Main" type="Node"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( 960, 544 )
texture = ExtResource( 1 )

[node name="BackHills" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/BackHills"]
visible = false
self_modulate = Color( 1, 1, 1, 0.172549 )
position = Vector2( 960, 544 )
texture = ExtResource( 2 )

[node name="Hills" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Hills"]
visible = false
self_modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 960, 544 )
texture = ExtResource( 3 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( -327584, 0, 0, -327583, 0, 1, -327582, 0, 1, -327581, 0, 2, -262048, 0, 65536, -262047, 0, 65537, -262046, 0, 65537, -262045, 0, 65538, -196512, 0, 65536, -196511, 0, 65537, -196510, 0, 65537, -196509, 0, 65538, -130976, 0, 65536, -130975, 0, 65537, -130974, 0, 65537, -130973, 0, 65538, -2, 0, 3, -65440, 0, 65536, -65439, 0, 65537, -65438, 0, 65537, -65437, 0, 65538, 65534, 0, 65539, 96, 0, 65536, 97, 0, 65537, 98, 0, 65537, 99, 0, 65538, 131070, 0, 65539, 65632, 0, 131072, 65633, 0, 65542, 65634, 0, 65537, 65635, 0, 65538, 196606, 0, 65539, 131169, 0, 65536, 131170, 0, 65537, 131171, 0, 65538, 262142, 0, 65539, 196705, 0, 131072, 196706, 0, 65542, 196707, 0, 65538, 327678, 0, 65539, 262242, 0, 65536, 262243, 0, 65538, 393214, 0, 65539, 327778, 0, 65536, 327779, 0, 65538, 458750, 0, 65539, 393314, 0, 65536, 393315, 0, 65538, 393320, 0, 0, 393321, 0, 2, 524286, 0, 65539, 458850, 0, 65536, 458851, 0, 65538, 458856, 0, 65536, 458857, 0, 65538, 589822, 0, 65539, 524386, 0, 65536, 524387, 0, 65538, 524392, 0, 65536, 524393, 0, 65538, 655358, 0, 65539, 589922, 0, 65536, 589923, 0, 65538, 589928, 0, 65536, 589929, 0, 65538, 720894, 0, 65539, 655406, 0, 0, 655407, 0, 1, 655408, 0, 2, 655458, 0, 131072, 655459, 0, 131074, 655464, 0, 65536, 655465, 0, 65538, 786430, 0, 65539, 720942, 0, 65536, 720943, 0, 65537, 720944, 0, 65538, 720970, 0, 0, 720971, 0, 1, 720972, 0, 1, 720973, 0, 2, 721000, 0, 65536, 721001, 0, 131077, 721002, 0, 1, 721003, 0, 2, 851966, 0, 65539, 786465, 0, 0, 786466, 0, 2, 786478, 0, 65536, 786479, 0, 65537, 786480, 0, 131077, 786481, 0, 1, 786482, 0, 1, 786483, 0, 1, 786484, 0, 2, 786506, 0, 65536, 786507, 0, 65537, 786508, 0, 65537, 786509, 0, 65538, 786523, 0, 0, 786524, 0, 1, 786525, 0, 2, 786536, 0, 65536, 786537, 0, 65537, 786538, 0, 65537, 786539, 0, 65538, 917502, 0, 65539, 852000, 0, 0, 852001, 0, 131078, 852002, 0, 65538, 852014, 0, 65536, 852015, 0, 65537, 852016, 0, 65537, 852017, 0, 65537, 852018, 0, 65537, 852019, 0, 65537, 852020, 0, 65538, 852036, 0, 0, 852037, 0, 1, 852038, 0, 2, 852041, 0, 0, 852042, 0, 131078, 852043, 0, 65537, 852044, 0, 65537, 852045, 0, 65538, 852059, 0, 65536, 852060, 0, 65537, 852061, 0, 131077, 852062, 0, 2, 852072, 0, 65536, 852073, 0, 65537, 852074, 0, 65537, 852075, 0, 65538, 983038, 0, 131076, 983039, 0, 1, 917504, 0, 1, 917505, 0, 1, 917506, 0, 1, 917507, 0, 1, 917508, 0, 1, 917509, 0, 1, 917510, 0, 1, 917511, 0, 1, 917512, 0, 1, 917513, 0, 1, 917514, 0, 1, 917515, 0, 1, 917516, 0, 1, 917517, 0, 1, 917518, 0, 1, 917519, 0, 1, 917520, 0, 1, 917521, 0, 1, 917522, 0, 1, 917523, 0, 1, 917524, 0, 1, 917525, 0, 1, 917526, 0, 1, 917527, 0, 1, 917528, 0, 1, 917529, 0, 1, 917530, 0, 1, 917531, 0, 1, 917532, 0, 1, 917533, 0, 1, 917534, 0, 1, 917535, 0, 1, 917536, 0, 131078, 917537, 0, 65537, 917538, 0, 65538, 917547, 0, 0, 917548, 0, 1, 917549, 0, 1, 917550, 0, 131078, 917551, 0, 65537, 917552, 0, 65537, 917553, 0, 65537, 917554, 0, 65537, 917555, 0, 65537, 917556, 0, 65538, 917561, 0, 0, 917562, 0, 1, 917563, 0, 1, 917564, 0, 1, 917565, 0, 1, 917566, 0, 1, 917567, 0, 1, 917568, 0, 1, 917569, 0, 1, 917570, 0, 1, 917571, 0, 1, 917572, 0, 131078, 917573, 0, 65537, 917574, 0, 131077, 917575, 0, 1, 917576, 0, 1, 917577, 0, 131078, 917578, 0, 65537, 917579, 0, 65537, 917580, 0, 65537, 917581, 0, 131077, 917582, 0, 1, 917583, 0, 1, 917584, 0, 2, 917593, 0, 0, 917594, 0, 1, 917595, 0, 131078, 917596, 0, 65537, 917597, 0, 65537, 917598, 0, 131077, 917599, 0, 1, 917600, 0, 1, 917601, 0, 1, 917602, 0, 1, 917603, 0, 1, 917604, 0, 1, 917605, 0, 1, 917606, 0, 1, 917607, 0, 1, 917608, 0, 131078, 917609, 0, 65537, 917610, 0, 65537, 917611, 0, 131077, 917612, 0, 1, 917613, 0, 1, 917614, 0, 1, 917615, 0, 1, 917616, 0, 1, 917617, 0, 2, 1048574, 0, 65536, 1048575, 0, 65537, 983040, 0, 65537, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 65537, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65537, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 65537, 983059, 0, 65537, 983060, 0, 65537, 983061, 0, 65537, 983062, 0, 65537, 983063, 0, 65537, 983064, 0, 65537, 983065, 0, 65537, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 65537, 983070, 0, 65537, 983071, 0, 65537, 983072, 0, 65537, 983073, 0, 65537, 983074, 0, 131077, 983075, 0, 1, 983076, 0, 1, 983077, 0, 1, 983078, 0, 1, 983079, 0, 1, 983080, 0, 1, 983081, 0, 1, 983082, 0, 1, 983083, 0, 131078, 983084, 0, 65537, 983085, 0, 65537, 983086, 0, 65537, 983087, 0, 65537, 983088, 0, 65537, 983089, 0, 65537, 983090, 0, 65537, 983091, 0, 65537, 983092, 0, 131077, 983093, 0, 1, 983094, 0, 1, 983095, 0, 1, 983096, 0, 1, 983097, 0, 131078, 983098, 0, 65537, 983099, 0, 65537, 983100, 0, 65537, 983101, 0, 65537, 983102, 0, 65537, 983103, 0, 65537, 983104, 0, 65537, 983105, 0, 65537, 983106, 0, 65537, 983107, 0, 65537, 983108, 0, 65537, 983109, 0, 65537, 983110, 0, 65537, 983111, 0, 65537, 983112, 0, 65537, 983113, 0, 65537, 983114, 0, 65537, 983115, 0, 65537, 983116, 0, 65537, 983117, 0, 65537, 983118, 0, 65537, 983119, 0, 65537, 983120, 0, 65538, 983129, 0, 65536, 983130, 0, 65537, 983131, 0, 65537, 983132, 0, 65537, 983133, 0, 65537, 983134, 0, 65537, 983135, 0, 65537, 983136, 0, 65537, 983137, 0, 65537, 983138, 0, 65537, 983139, 0, 65537, 983140, 0, 65537, 983141, 0, 65537, 983142, 0, 65537, 983143, 0, 65537, 983144, 0, 65537, 983145, 0, 65537, 983146, 0, 65537, 983147, 0, 65537, 983148, 0, 65537, 983149, 0, 65537, 983150, 0, 65537, 983151, 0, 65537, 983152, 0, 65537, 983153, 0, 65538, 1114110, 0, 65536, 1114111, 0, 65537, 1048576, 0, 65537, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65537, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 0, 65537, 1048597, 0, 65537, 1048598, 0, 65537, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1048607, 0, 65537, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65537, 1048612, 0, 65537, 1048613, 0, 65537, 1048614, 0, 65537, 1048615, 0, 65537, 1048616, 0, 65537, 1048617, 0, 65537, 1048618, 0, 65537, 1048619, 0, 65537, 1048620, 0, 65537, 1048621, 0, 65537, 1048622, 0, 65537, 1048623, 0, 65537, 1048624, 0, 65537, 1048625, 0, 65537, 1048626, 0, 65537, 1048627, 0, 65537, 1048628, 0, 65537, 1048629, 0, 65537, 1048630, 0, 65537, 1048631, 0, 65537, 1048632, 0, 65537, 1048633, 0, 65537, 1048634, 0, 65537, 1048635, 0, 65537, 1048636, 0, 65537, 1048637, 0, 65537, 1048638, 0, 65537, 1048639, 0, 65537, 1048640, 0, 65537, 1048641, 0, 65537, 1048642, 0, 65537, 1048643, 0, 65537, 1048644, 0, 65537, 1048645, 0, 65537, 1048646, 0, 65537, 1048647, 0, 65537, 1048648, 0, 65537, 1048649, 0, 65537, 1048650, 0, 65537, 1048651, 0, 65537, 1048652, 0, 65537, 1048653, 0, 65537, 1048654, 0, 65537, 1048655, 0, 65537, 1048656, 0, 131077, 1048657, 0, 1, 1048658, 0, 1, 1048659, 0, 1, 1048660, 0, 1, 1048661, 0, 1, 1048662, 0, 1, 1048663, 0, 1, 1048664, 0, 1, 1048665, 0, 131078, 1048666, 0, 65537, 1048667, 0, 65537, 1048668, 0, 65537, 1048669, 0, 65537, 1048670, 0, 65537, 1048671, 0, 65537, 1048672, 0, 65537, 1048673, 0, 65537, 1048674, 0, 65537, 1048675, 0, 65537, 1048676, 0, 65537, 1048677, 0, 65537, 1048678, 0, 65537, 1048679, 0, 65537, 1048680, 0, 65537, 1048681, 0, 65537, 1048682, 0, 65537, 1048683, 0, 65537, 1048684, 0, 65537, 1048685, 0, 65537, 1048686, 0, 65537, 1048687, 0, 65537, 1048688, 0, 65537, 1048689, 0, 65538, 1179646, 0, 65536, 1179647, 0, 65537, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 65537, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 65537, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65537, 1114149, 0, 65537, 1114150, 0, 65537, 1114151, 0, 65537, 1114152, 0, 65537, 1114153, 0, 65537, 1114154, 0, 65537, 1114155, 0, 65537, 1114156, 0, 65537, 1114157, 0, 65537, 1114158, 0, 65537, 1114159, 0, 65537, 1114160, 0, 65537, 1114161, 0, 65537, 1114162, 0, 65537, 1114163, 0, 65537, 1114164, 0, 65537, 1114165, 0, 65537, 1114166, 0, 65537, 1114167, 0, 65537, 1114168, 0, 65537, 1114169, 0, 65537, 1114170, 0, 65537, 1114171, 0, 65537, 1114172, 0, 65537, 1114173, 0, 65537, 1114174, 0, 65537, 1114175, 0, 65537, 1114176, 0, 65537, 1114177, 0, 65537, 1114178, 0, 65537, 1114179, 0, 65537, 1114180, 0, 65537, 1114181, 0, 65537, 1114182, 0, 65537, 1114183, 0, 65537, 1114184, 0, 65537, 1114185, 0, 65537, 1114186, 0, 65537, 1114187, 0, 65537, 1114188, 0, 65537, 1114189, 0, 65537, 1114190, 0, 65537, 1114191, 0, 65537, 1114192, 0, 65537, 1114193, 0, 65537, 1114194, 0, 65537, 1114195, 0, 65537, 1114196, 0, 65537, 1114197, 0, 65537, 1114198, 0, 65537, 1114199, 0, 65537, 1114200, 0, 65537, 1114201, 0, 65537, 1114202, 0, 65537, 1114203, 0, 65537, 1114204, 0, 65537, 1114205, 0, 65537, 1114206, 0, 65537, 1114207, 0, 65537, 1114208, 0, 65537, 1114209, 0, 65537, 1114210, 0, 65537, 1114211, 0, 65537, 1114212, 0, 65537, 1114213, 0, 65537, 1114214, 0, 65537, 1114215, 0, 65537, 1114216, 0, 65537, 1114217, 0, 65537, 1114218, 0, 65537, 1114219, 0, 65537, 1114220, 0, 65537, 1114221, 0, 65537, 1114222, 0, 65537, 1114223, 0, 65537, 1114224, 0, 65537, 1114225, 0, 65538, 1245182, 0, 131072, 1245183, 0, 131073, 1179648, 0, 131073, 1179649, 0, 131073, 1179650, 0, 131073, 1179651, 0, 131073, 1179652, 0, 131073, 1179653, 0, 131073, 1179654, 0, 131073, 1179655, 0, 131073, 1179656, 0, 131073, 1179657, 0, 131073, 1179658, 0, 131073, 1179659, 0, 131073, 1179660, 0, 131073, 1179661, 0, 131073, 1179662, 0, 131073, 1179663, 0, 131073, 1179664, 0, 131073, 1179665, 0, 131073, 1179666, 0, 131073, 1179667, 0, 131073, 1179668, 0, 131073, 1179669, 0, 131073, 1179670, 0, 131073, 1179671, 0, 131073, 1179672, 0, 131073, 1179673, 0, 131073, 1179674, 0, 131073, 1179675, 0, 131073, 1179676, 0, 131073, 1179677, 0, 131073, 1179678, 0, 131073, 1179679, 0, 131073, 1179680, 0, 131073, 1179681, 0, 131073, 1179682, 0, 131073, 1179683, 0, 131073, 1179684, 0, 131073, 1179685, 0, 131073, 1179686, 0, 131073, 1179687, 0, 131073, 1179688, 0, 131073, 1179689, 0, 131073, 1179690, 0, 131073, 1179691, 0, 131073, 1179692, 0, 131073, 1179693, 0, 131073, 1179694, 0, 131073, 1179695, 0, 131073, 1179696, 0, 131073, 1179697, 0, 131073, 1179698, 0, 131073, 1179699, 0, 131073, 1179700, 0, 131073, 1179701, 0, 131073, 1179702, 0, 131073, 1179703, 0, 131073, 1179704, 0, 131073, 1179705, 0, 131073, 1179706, 0, 131073, 1179707, 0, 131073, 1179708, 0, 131073, 1179709, 0, 131073, 1179710, 0, 131073, 1179711, 0, 131073, 1179712, 0, 131073, 1179713, 0, 131073, 1179714, 0, 131073, 1179715, 0, 131073, 1179716, 0, 131073, 1179717, 0, 131073, 1179718, 0, 131073, 1179719, 0, 131073, 1179720, 0, 131073, 1179721, 0, 131073, 1179722, 0, 131073, 1179723, 0, 131073, 1179724, 0, 131073, 1179725, 0, 131073, 1179726, 0, 131073, 1179727, 0, 131073, 1179728, 0, 131073, 1179729, 0, 131073, 1179730, 0, 131073, 1179731, 0, 131073, 1179732, 0, 131073, 1179733, 0, 131073, 1179734, 0, 131073, 1179735, 0, 131073, 1179736, 0, 131073, 1179737, 0, 131073, 1179738, 0, 131073, 1179739, 0, 131073, 1179740, 0, 131073, 1179741, 0, 131073, 1179742, 0, 131073, 1179743, 0, 131073, 1179744, 0, 131073, 1179745, 0, 131073, 1179746, 0, 131073, 1179747, 0, 131073, 1179748, 0, 131073, 1179749, 0, 131073, 1179750, 0, 131073, 1179751, 0, 131073, 1179752, 0, 131073, 1179753, 0, 131073, 1179754, 0, 131073, 1179755, 0, 131073, 1179756, 0, 131073, 1179757, 0, 131073, 1179758, 0, 131073, 1179759, 0, 131073, 1179760, 0, 131073, 1179761, 0, 131074 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 960, 864 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
process_mode = 0
limit_left = 0
limit_top = 0
limit_bottom = 1080
limit_smoothed = true
smoothing_enabled = true

[node name="SlideshowWarps" type="Node2D" parent="."]

[node name="SlideshowWarp" parent="SlideshowWarps" instance=ExtResource( 8 )]
position = Vector2( 1664, 576 )
slideshow_scene = ExtResource( 9 )
slideshow_name = "INTRODUCTION"

[node name="SlideshowLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 10

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
bus = "Music"

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
